removed overflows on invite form and containers to reduce scroll bug occurences

--- a/src/styles/_add-subject-control.scss
+++ b/src/styles/_add-subject-control.scss
@@ -8,8 +8,6 @@ $block-class: 'add-subject-control';
             border: 2px solid $border-color;
             border-radius: 2px;
             width: 80%;
-            max-height: 400px;
-            overflow-y: scroll;
             margin-left: 10%;
             margin-right: 10%;
         }
